--- a/flutter_profilecard/pubspec.yaml
+++ b/flutter_profilecard/pubspec.yaml
@@ -61,6 +61,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - assets/profile.png
+   - assets/instagram.png
+   - assets/github.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
