--- a/flutter_profilecard/pubspec.yaml
+++ b/flutter_profilecard/pubspec.yaml
@@ -64,6 +64,7 @@ flutter:
    - assets/profile.png
    - assets/instagram.png
    - assets/github.png
+   - assets/kusing.mp4
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
